# Asterisk

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  UpgradeVersion.rb  dockerfile
config/asterisk/: cobra.conf  confbridge.conf  pjsip.conf
protos/: CMakeLists.txt  README.md  call_event.proto  cas_service.proto  cds_service.proto  cms_service.proto
scripts/: install_deps.sh  install_mediaservices.sh
src/ast_custom/: CMakeLists.txt
src/ast_custom/include/: ast_custom_defs.h
src/ast_custom/res_cas_client/: CMakeLists.txt  README.md  res_cas_client.c
src/ast_custom/res_cds_publish/: CMakeLists.txt  README.md  res_cds_publish.c
src/ast_custom/res_cms_server/: CMakeLists.txt  README.md  res_cms_server.c
src/ast_custom/res_cms_server/impl/: esinet_refer.c
src/ast_custom/res_cms_server/include/: esinet_refer.h
src/ast_custom/res_pjsip_call_incoming/: CMakeLists.txt  publish_cds_call_end.cc  publish_cds_call_start.cc  res_pjsip_call_incoming.c
src/ast_custom/res_pjsip_call_incoming/include/: publish_cds_call_end.h  publish_cds_call_start.h
src/ast_custom/res_pjsip_cobra/: CMakeLists.txt  res_pjsip_cobra.c
src/ast_custom/res_pjsip_cobra/include/: res_pjsip_cobra.h
src/ast_custom/res_pjsip_nena_i3/: CMakeLists.txt  res_pjsip_nena_i3.c
src/ast_custom/res_pjsip_nena_i3/include/: res_pjsip_nena_i3.h
src/cas_client/: CMakeLists.txt  README.md  cas_client.cc
src/cas_client/include/: cas_client.h  cas_service.h
src/cds_publish/: CMakeLists.txt  README.md  cds_publish.cc
src/cds_publish/include/: cds_publish.h
src/cds_relay/: CMakeLists.txt  Program.cs  README.md  appsettings.json  cds_relay.csproj  cds_relay.sln
src/cds_relay/Properties/: launchSettings.json
src/cds_relay/Services/: CdsPublisher.cs
src/cds_relay/systemd/: cds_relay.service.in
src/cms_server/: CMakeLists.txt  cms_server.cc
src/cms_server/include/: cms_server.h  cms_service.h
